ps-cfk-infra/bases/0_external/prometheus/ing/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-monitoring
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - prometheus.kafka.nermdev.io
        - grafana.kafka.nermdev.io
  rules:
    - host: prometheus.nermdev.io
      http:
        paths:
          - backend:
              service:
                name: prometheus-server
                port:
                  number: 80
            pathType: ImplementationSpecific
    - host: grafana.nermdev.io
      http:
        paths:
          - backend:
              service:
                name: grafana
                port:
                  number: 3000
            pathType: ImplementationSpecific
